# ip-geolocation-service

./: DEVELOPMENT_NOTES.md  README.md  generate_openapi.py  main.py  openapi.yaml  pyproject.toml  requirements.txt  ruff.toml
api/: api_models.py  routers.py  utils.py
api/tests/: test_api_geolocations.py  test_unit_geolocations.py
src/api/: api_models.py  utils.py
src/api/tests/: test_unit_geolocations.py
